--- a/Contact.html
+++ b/Contact.html
@@ -1,6 +1,6 @@
 <h1>Contact Me</h1>
-<p>Tel: 9876543210</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: 9502461221</p>
+<p>Email: usthilimeghana5334@gmail.com</p>
 <p>Address:</p>
 <p>
   Banglore<br />
