--- a/index.html
+++ b/index.html
@@ -21,18 +21,22 @@
                 <p>Sri Chaitanya Girls College<br />
                    69.33 % in 2018
                 </p>
-                <li><b><u>Degree</u></b></li>
+                <li><b><u>BSc</u></b></li>
                 <p>Smt. Allum Sumangalamma Memorial College for Women's<br />
+                   66.07 % in 2022
+                </p>
+                <li><b><u>MCA</u></b></li>
+                <p>Atria Institute of Technology<br />
                    66.07 % in 2022
                 </p>
             </ul>
             <li><h2>Skills :</h2></li>
             <ol>
                 <li>Programming Languages:C,C++,JAVA</li>
-                <li>Web-Technologies:HTML,CSS</li>
+                <li>Web-Technologies:HTML,CSS,JavaScript,React.js</li>
                 <li>Database:Oracle,MYSQL</li>
-                <li>Operating System: Windows 10 & Windows 11</li>
-                <li>MS Office</li>
+                <li>Operating System: Windows 10,Windows 11 & Linux</li>
+                <li>MS Office,GIT</li>
             </ol>
         </ul>
         <a href="./Hobbies.html">Hobbies</a><br />
