--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </p>
                 <li><b><u>MCA</u></b></li>
                 <p>Atria Institute of Technology<br />
-                   66.07 % in 2022
+                   8.6 GPA in 2024
                 </p>
             </ul>
             <li><h2>Skills :</h2></li>
