--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                    66.07 % in 2022
                 </p>
                 <li><b><u>MCA</u></b></li>
-                <p>Atria Institute of Technology<br />
+                <p>Atria Institute of Technology,Bangalore<br />
                    8.6 GPA in 2024
                 </p>
             </ul>
