--- a/Capstone Project-1/index.html
+++ b/Capstone Project-1/index.html
@@ -33,7 +33,7 @@
             <li><h2>Skills :</h2></li>
             <ol>
                 <li>Programming Languages:C,C++,JAVA</li>
-                <li>Web-Technologies:HTML,CSS</li>
+                <li>Web-Technologies:HTML,CSS, React, Javascript</li>
                 <li>Database:Oracle,MYSQL</li>
                 <li>Operating System: Windows 10,Windows 11 & Linux</li>
                 <li>MS Office</li>
